kong/kong-mesh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shipanything
  annotations:
    kuma.io/sidecar-injection: enabled
  labels:
    name: shipanything
    kuma.io/sidecar-injection: enabled
